Inline sources on index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+<!-- smoosh -->
+
 <head>
   <meta charset="utf-8">
+
   <link rel="stylesheet" href="styles/app.css" />
   <title>Animation Creator</title>
 </head>
@@ -17,3 +20,5 @@
 </body>
 
 </html>
+
+<!-- endsmoosh -->
