Introduce storage for the entire state of the generator

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js"></script>
-  <script type="text/javascript" src="lib/SVGPointStore.js"></script>
+  <script type="text/javascript" src="lib/StateStore.js"></script>
   <script type="text/javascript" src="lib/app.js"></script>
 </body>
 
